feat: get product_id and abort when coupon expired
